fix: remove touch-action css prop to not prevent scrolling on ios

--- a/src/index.css
+++ b/src/index.css
@@ -37,8 +37,7 @@ body {
   min-width: 320px;
   min-height: 100dvh;
   width: 100%;
-  overscroll-behavior: none; /* Works in Chrome, Firefox, Edge */
-  touch-action: none; /* Safari fallback for preventing overscroll on touch devices */
+  overscroll-behavior: none;
 }
 
 h1 {
